--- a/CodingService/build.gradle
+++ b/CodingService/build.gradle
@@ -16,16 +16,21 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.enterprise'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
 }
 
-
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-actuator")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+}
+
+task copyJar(type: Copy) {
+	from "${buildDir}/libs"
+	include  "*.jar"
+	into ""
 }
