--- a/CodingService/build.gradle
+++ b/CodingService/build.gradle
@@ -8,6 +8,9 @@ buildscript {
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 	}
+	dependencies {
+		classpath "io.spring.gradle:dependency-management-plugin:0.5.2.RELEASE"
+	}
 }
 
 apply plugin: 'java'
@@ -21,11 +24,21 @@ sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+	maven {
+		url 'https://repo.spring.io/libs-snapshot'
+	}
+}
+
+dependencyManagement {
+	imports {
+		mavenBom 'org.springframework.cloud:spring-cloud-sleuth:2.0.0.RC1'
+	}
 }
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-actuator")
+	compile ("org.springframework.cloud:spring-cloud-starter-sleuth")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
