--- a/CodingService/build.gradle
+++ b/CodingService/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-actuator")
 	compile ("org.springframework.cloud:spring-cloud-starter-sleuth")
+	compile ("org.springframework.cloud:spring-cloud-starter-zipkin")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
